Changes configuration for elasticsearch

--- a/conf/logstash-receiver.conf.erb
+++ b/conf/logstash-receiver.conf.erb
@@ -8,5 +8,5 @@ redis { host => "<%= ENV['OPENSHIFT_REDIS_HOST']%>"
 }
 output {
   file { path => "<%= ENV['OPENSHIFT_TMP_DIR']%>/logstash.%{+YYYY-MM-dd}.txt" }
-  websocket { host => "<%= ENV['OPENSHIFT_LOGSTASH_WS_IP']%>" port => "<%= ENV['OPENSHIFT_LOGSTASH_WS_PORT']%>" }
+  elasticsearch { host => "<%= ENV['OPENSHIFT_ELASTICSEARCH_HOST']%>" port => "<%= ENV['OPENSHIFT_ELASTICSEARCH_PORT']%>" }
 }
