Simplified and fixed conf.erb

--- a/conf/logstash-receiver.conf.erb
+++ b/conf/logstash-receiver.conf.erb
@@ -3,21 +3,9 @@ redis { host => "<%= ENV['OPENSHIFT_REDIS_HOST']%>"
         port => "<%= ENV['OPENSHIFT_REDIS_PORT']%>"
         password => "<%= ENV['OPENSHIFT_REDIS_PASSWORD']%>"
         data_type => "list"
-        key => "osemetrics"
-        codec => "json" }
+        key => "osedata"  }
 }
 output {
-  file { path => "<%= ENV['OPENSHIFT_TMP_DIR']%>/%{+YYYY-MM-dd}_logstash.txt" }
-  elasticsearch { host => "<%= ENV['OPENSHIFT_ELASTICSEARCH_HOST']%>" port => "<%= ENV['OPENSHIFT_ELASTICSEARCH_PORT']%>" codec => "json" }
-}
-
-input {
-redis { host => "<%= ENV['OPENSHIFT_REDIS_HOST']%>"
-        port => "<%= ENV['OPENSHIFT_REDIS_PORT']%>"
-        password => "<%= ENV['OPENSHIFT_REDIS_PASSWORD']%>"
-        data_type => "list"
-        key => "oselogs" }
-}
-output {
-  elasticsearch { host => "<%= ENV['OPENSHIFT_ELASTICSEARCH_HOST']%>" port => "<%= ENV['OPENSHIFT_ELASTICSEARCH_PORT']%>" codec => "json" }
+  elasticsearch_http { host => "<%= ENV['OPENSHIFT_ELASTICSEARCH_HOST']%>"
+                       port => "<%= ENV['OPENSHIFT_ELASTICSEARCH_PORT']%>" }
 }
